[gd_scene load_steps=21 format=3 uid="uid://dxymorex4sjx5"]

[ext_resource type="Texture2D" uid="uid://bs2k3b4puxhv" path="res://player/player.png" id="1_oul6g"]
[ext_resource type="Script" uid="uid://xm3kierupufm" path="res://player/player.gd" id="1_rkbax"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rkbax"]
atlas = ExtResource("1_oul6g")
region = Rect2(64, 240, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_qjkh3"]
atlas = ExtResource("1_oul6g")
region = Rect2(64, 216, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6k8r"]
atlas = ExtResource("1_oul6g")
region = Rect2(64, 240, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_boad6"]
atlas = ExtResource("1_oul6g")
region = Rect2(64, 264, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_oul6g"]
atlas = ExtResource("1_oul6g")
region = Rect2(32, 216, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1dw6"]
atlas = ExtResource("1_oul6g")
region = Rect2(32, 240, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_yw30f"]
atlas = ExtResource("1_oul6g")
region = Rect2(32, 264, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgyib"]
atlas = ExtResource("1_oul6g")
region = Rect2(48, 216, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_hg6s5"]
atlas = ExtResource("1_oul6g")
region = Rect2(48, 240, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_8t03j"]
atlas = ExtResource("1_oul6g")
region = Rect2(48, 264, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ieo8"]
atlas = ExtResource("1_oul6g")
region = Rect2(16, 216, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebec5"]
atlas = ExtResource("1_oul6g")
region = Rect2(16, 240, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_yllr7"]
atlas = ExtResource("1_oul6g")
region = Rect2(16, 264, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_kb6p2"]
atlas = ExtResource("1_oul6g")
region = Rect2(0, 216, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_wodsf"]
atlas = ExtResource("1_oul6g")
region = Rect2(0, 240, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_32hag"]
atlas = ExtResource("1_oul6g")
region = Rect2(0, 264, 16, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_g1dw6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkbax")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qjkh3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6k8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_boad6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6k8r")
}],
"loop": true,
"name": &"move_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oul6g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1dw6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yw30f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1dw6")
}],
"loop": true,
"name": &"move_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rgyib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hg6s5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8t03j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hg6s5")
}],
"loop": true,
"name": &"move_rightdown",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ieo8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebec5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yllr7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebec5")
}],
"loop": true,
"name": &"move_rightup",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kb6p2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wodsf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_32hag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wodsf")
}],
"loop": true,
"name": &"move_up",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oul6g"]
size = Vector2(33, 51)

[node name="player" type="CharacterBody2D" node_paths=PackedStringArray("anim", "invisible_timer", "hit_area")]
script = ExtResource("1_rkbax")
anim = NodePath("anim")
invisible_timer = NodePath("invisible_timer")
hit_area = NodePath("hit_area")

[node name="anim" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_g1dw6")
animation = &"idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.5, 4.5)
shape = SubResource("RectangleShape2D_oul6g")

[node name="coin_area" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="coin_area"]
position = Vector2(-1.5, 4.5)
shape = SubResource("RectangleShape2D_oul6g")

[node name="hit_area" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="hit_area"]
position = Vector2(-1.5, 4.5)
shape = SubResource("RectangleShape2D_oul6g")

[node name="invisible_timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="area_entered" from="coin_area" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="hit_area" to="." method="_on_hit_area_area_entered"]
[connection signal="timeout" from="invisible_timer" to="." method="_on_invisible_timer_timeout"]
